---
source: src/parser/text.rs
expression: text(&mut parser)
---
Some(
    Tokens(
        [
            Content(
                "leading ",
            ),
            Styled {
                content: [
                    Content(
                        "one ",
                    ),
                    Styled {
                        content: [
                            Content(
                                "two ",
                            ),
                            Styled {
                                content: [
                                    Content(
                                        "three",
                                    ),
                                ],
                                style: Style {
                                    foreground: None,
                                    background: None,
                                    decoration: Some(
                                        {
                                            Dim,
                                        },
                                    ),
                                },
                            },
                            Content(
                                " two",
                            ),
                        ],
                        style: Style {
                            foreground: None,
                            background: Some(
                                Blue,
                            ),
                            decoration: None,
                        },
                    },
                    Content(
                        " one",
                    ),
                ],
                style: Style {
                    foreground: Some(
                        Red,
                    ),
                    background: None,
                    decoration: None,
                },
            },
            Content(
                " trailing",
            ),
        ],
    ),
)
